--- a/products.css
+++ b/products.css
@@ -80,25 +80,122 @@
 
 
 
-@media only screen and (max-width: 375px) {
- 
- .container-fluid{margin-right:0px ;}
+
+@media only screen and (max-width: 320px) {
+  .container-fluid{
+    padding: 0;
+    margin: 0 auto;
+    
+  }
+  .container{
+    padding: 0;
+    margin: 0 auto;
+  }
+  .title-name{
+    font-size: 14px !important;
+   
+  }
+
+  .product-header {
+    font-size: 15px;
+    text-align: center;
+    padding: 5px;
+
+  }
+
  
   .compression-spring-cards {
-    width: 280px;
+    width: 300px !important;
+    height: 500px;
+    background-color: rgb(180, 43, 43);
+    border-radius: 10px;
+  
+  
+  }
+
+  .compression-spring-cards img {
+    margin: 0px auto;
+    object-fit: cover;
+    border-radius: 10px;
+    padding: 5px 5px;
+    width: 300px !important;
+    height: 250px;
+  }
+.Torsion-spring-cards{
+  width: 300px !important;
+  height: 500px;
+  background-color: rgb(36, 132, 29);
+  border-radius: 10px;
+
+}
+.Torsion-spring-cards img {
+  margin: 0px auto;
+  object-fit: cover;
+  border-radius: 10px;
+  padding: 5px 5px;
+  width: 300px !important;
+  height: 250px;
+}
+.Tension-spring-cards{
+  width: 300px !important;
+  height: 500px;
+  background-color: rgb(175, 157, 179);
+  border-radius: 10px;
+
+}
+.Tension-spring-cards img {
+  margin: 0px auto;
+  object-fit: cover;
+  border-radius: 10px;
+  padding: 5px 5px;
+  width: 300px !important;
+  height: 250px;
+}
+
+}
+
+
+
+
+
+
+@media only screen and (max-width: 375px) {
+  .container-fluid{
+    padding: 0;
+    margin: 0 auto;
+    
+  }
+  .container{
+    padding: 0;
+    margin: 0 auto;
+  }
+  .title-name{
+    font-size: 15px;
+  }
+
+  .product-header {
+    font-size: 15px;
+    text-align: center;
+    padding: 5px;
+
+  }
+
+ 
+  .compression-spring-cards {
+    width: 325px;
     height: 500px;
     background-color: rgb(200, 171, 171);
     border-radius: 10px;
   
   
   }
-  
+
   .compression-spring-cards img {
     margin: 0px auto;
     object-fit: cover;
     border-radius: 10px;
     padding: 5px 5px;
-    width: 280px;
+    width: 325px;
     height: 250px;
   }
 .Torsion-spring-cards{
@@ -113,11 +210,11 @@
   object-fit: cover;
   border-radius: 10px;
   padding: 5px 5px;
-  width: 280px;
+  width: 325px;
   height: 250px;
 }
 .Tension-spring-cards{
-  width: 280px;
+  width: 325px;
   height: 500px;
   background-color: rgb(175, 157, 179);
   border-radius: 10px;
@@ -128,7 +225,35 @@
   object-fit: cover;
   border-radius: 10px;
   padding: 5px 5px;
-  width: 280px;
+  width: 325px;
+  height: 250px;
+}
+
+
+
+
+
+.Torsion-spring-cards img {
+  margin: 0px auto;
+  object-fit: cover;
+  border-radius: 10px;
+  padding: 5px 5px;
+  width: 325px;
+  height: 250px;
+}
+.Tension-spring-cards{
+  width: 325px;
+  height: 500px;
+  background-color: rgb(175, 157, 179);
+  border-radius: 10px;
+
+}
+.Tension-spring-cards img {
+  margin: 0px auto;
+  object-fit: cover;
+  border-radius: 10px;
+  padding: 5px 5px;
+  width: 325px;
   height: 250px;
 }
 
@@ -139,9 +264,13 @@
 
 
 @media only screen and (max-width: 576px) {
+ 
+
+
+
   .product-header {
-    font-size: 20px;
-    text-align: center;
+    font-size: 18px;
+    text-align: start;
     padding: 5px;
 
   }
