--- a/contact.css
+++ b/contact.css
@@ -13,6 +13,117 @@
 .form-check-input{
  margin-right: 10px;
 }
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 510px;
+  width: 450px;
+} 
+ .gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 510px;
+  width: 770px;
+}
+
+
+
+
+@media only screen and (max-width: 320px) {
+  .container-fluid{
+    padding: 0;
+    margin: 0 auto;
+    
+  }
+  .container{
+    padding: 0;
+    margin: 0 auto; 
+   
+  }
+  .title-name{
+    font-size: 14px !important;
+   
+  }
+  .mapouter {
+    position: relative;
+    text-align: right;
+    width: 300px;
+    height: 410px;
+    margin: 10px auto;
+
+  } 
+   .gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    height: 410px;
+    width: 300px;
+
+  }
+  .text-start{
+  padding-left: 20px !important;
+  }
+  .text-md-start{
+    text-align: center !important;
+  }
+ 
+
+}
+
+
+@media only screen and (max-width: 320px) {
+  .container-fluid{
+    padding: 0;
+    margin: 0 auto;
+    
+  }
+  .container{
+    padding: 0;
+    margin: 0 auto; 
+   
+  }
+  .title-name{
+    font-size: 14px !important;
+   
+  }
+  .mapouter {
+    position: relative;
+    text-align: right;
+    width: 300px;
+    height: 410px;
+    margin: 10px auto;
+
+  } 
+   .gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    height: 410px;
+    width: 300px;
+
+  }
+  .text-start{
+  padding-left: 20px !important;
+  }
+  .text-md-start{
+    text-align: center !important;
+  }
+ 
+
+}
+
+@media only screen and (max-width: 600px) and (min-width: 400px)  {
+  
+}
+
+
+
+
+
+
+
+
+
+
+
 
 @media only screen and (max-width: 375px) {
   
