--- a/home.css
+++ b/home.css
@@ -93,6 +93,22 @@
 /* phone write media query */
 
 
+
+
+
+
+@media only screen and (max-width: 375px) {
+  .container-fluid{
+    padding: 0;
+    margin: 0 auto;
+    
+  }
+  .container{
+    padding: 0;
+    margin: 0 auto;
+  }
+}
+
 @media only screen and (max-width: 576px) {
 
 /* compression spring */
@@ -105,7 +121,7 @@
 
 .spring-compression img{
   object-fit: cover;
-  width: 290px;
+  width: 300px;
   height: 185px;
  
  
@@ -155,4 +171,4 @@
 }
 
 }
-
+ 
