--- a/home.css
+++ b/home.css
@@ -94,9 +94,6 @@
 
 
 
-
-
-
 @media only screen and (max-width: 375px) {
   .container-fluid{
     padding: 0;
@@ -123,8 +120,7 @@
   object-fit: cover;
   width: 300px;
   height: 185px;
- 
- 
+
 }
 .spring-compression .circle {
   border-radius: 15px;
@@ -132,7 +128,6 @@
 .compression-tittle {
   font-size: 25px;
   margin-top: 10px;
-
 }
 /* compression spring */
 
@@ -146,23 +141,16 @@
   object-fit: cover;
   width: 300px;
   height: 220px;
-
 }
-
-
-
 /* Crusher Springs */
 
 /* Tension Springs */
-
-
 .spring-tension img {
   object-fit: cover;
   width: 300px;
   height: 220px;
 
 }
-
 .spring-tension .circle {
   border-radius: 15px;
 }
@@ -172,3 +160,26 @@
 
 }
  
+@media only screen and (max-width: 768px) and (min-width: 426px){
+.col-md-5{
+  padding: 0px;
+  margin: 0px;
+}
+.spring-compression img{
+  object-fit: cover;
+  width: 300px;
+  height: 185px;
+
+}
+.spring-crusher img {
+  object-fit: cover;
+  width: 300px;
+  height: 220px;
+}
+.spring-tension img {
+  object-fit: cover;
+  width: 280px;
+  height: 220px;
+
+}
+}
